--- a/src/pages/MainPage/MainPage.css
+++ b/src/pages/MainPage/MainPage.css
@@ -1,3 +1,40 @@
 .fieldset{
   margin: 40px;
 }
+.welcome-container{
+  position:relative;
+  margin:0 5vw;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row;
+  width: calc(100% - 10vw);
+}
+.welcome-text-container{
+  width: 33%;
+  height: 100%;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+}
+.welcome-text{
+  font-size: 3rem;
+  margin-block-start: 0.67em;
+  margin-block-end: 0.67em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  color:#495057;
+}
+
+.welcome-image-container{
+  width: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.welcome-image{
+  border-radius: 6px;
+  width: 80%;
+  aspect-ratio: 1;
+}
